<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    tools:context="com.example.rudyernestoescaleramejia.prueba_recicler.Main2Activity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/clasificados"
        />

    <TextView
        android:id="@+id/lavel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50px"
        android:layout_marginRight="0pt"
        android:layout_marginTop="0px"
        android:text="@string/lavel_name"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_bright"
        android:onClick="listaEmpresas"
        android:text="@string/button_text_listCompani"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="20dp" />

    <Button

        android:id="@+id/CallButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="40px"
        android:background="@android:color/holo_green_dark"
        android:elevation="0dp"

        android:onClick="Call"
        android:paddingTop="40px"
        android:text="@string/button_text_callPhone"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="300dp" />
</LinearLayout>

