<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/text_empresa"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50px"
        android:layout_marginBottom="50px">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@id/image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher"
               />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lavel_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="0pt"
                android:layout_marginTop="0px"
                android:text="@string/lavel_name"
                android:textStyle="bold"
                android:typeface="monospace" />


            <TextView
                android:id="@+id/txt_nombre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="100px"
                android:layout_marginRight="50pt"
                android:layout_marginTop="0px"
                android:text="Nombre"
                android:textAlignment="center"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/lavel_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="0pt"
                android:layout_marginTop="0px"
                android:text="@string/lavel_phone"
                android:textStyle="bold"
                android:typeface="monospace" />
            <TextView
                android:id="@+id/text_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="100px"
                android:layout_marginRight="0pt"
                android:layout_marginTop="0px"
                android:textAlignment="center"
                android:text="telefono"
                />
            <TextView
                android:id="@+id/lavel_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="0pt"
                android:layout_marginTop="0px"
                android:text="@string/lavel_email"
                android:textStyle="bold"
                android:typeface="monospace" />
            <TextView
                android:id="@+id/txt_correo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="100px"
                android:layout_marginRight="0pt"
                android:layout_marginTop="0px"
                android:layout_marginBottom="0px"
                android:text="Correo"
                android:textAlignment="center" />
        </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>